[package]
name = "timebank_csv"
version = "0.1.0"
edition = "2021"

[dependencies]
timebank_core = { path = "../timebank_core" }
timebank_db = { path = "../timebank_db" }
csv = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
glob = "*"
tracing = "*"
tracing-subscriber = "*"
