[package]
name = "timebank_db"
version = "0.1.0"
edition = "2021"

[dependencies]
timebank_core = { path = "../timebank_core" }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
