[package]
name = "timebank_http"
version = "0.1.0"
edition = "2021"

[dependencies]
timebank_core = { path = "../timebank_core" }
timebank_db = { path = "../timebank_db" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0", features = ["http2"] }
tracing = "0"
tracing-subscriber = "0"
sqlx = { version = "0", features = ["runtime-tokio-rustls", "sqlite"] }
tower-http = { version = "0", features = ["cors"] }
job_scheduler = "1"
