[package]
name = "timebank_http"
version = "0.1.0"
edition = "2021"

[dependencies]
timebank_core = { path = "../timebank_core" }
timebank_db = { path = "../timebank_db" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = ["http2"] }
tracing = "*"
tracing-appender = "*"
tracing-subscriber = "*"
sqlx = { version = "*", features = ["runtime-tokio-rustls", "sqlite"] }
tower-http = { version = "*", features = ["cors"] }
job_scheduler = "*"
